--- a/JAVA/Lab Practice/.recommenders/caches/identified-project-coordinates.json
+++ b/JAVA/Lab Practice/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-9"}},"jre:jre:1.9.0"]]
